[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Marco Piraccini <marco.piraccini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1"
num= "0.4.0"
rand= "0.8.0"
bitflags= "1.3.2"

[dev-dependencies]
cargo-husky = "1"
